# solana-localhost

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  README_JP.md  RELEASE_GUIDE.md  RELEASE_TUTORIAL.md  build-simple.sh  build-zigbuild.sh  build.ps1  build.sh  config copy.toml  config.toml  release.sh  test-arm64.yaml  test-linux-qemu.yaml  test-linux.yaml
.github/workflows/: build.yml  release.yml
release/: solana-localhost-linux-arm64  solana-localhost-linux-x64  solana-localhost-macos-arm64  solana-localhost-macos-x64
src/: main.rs
